--- a/projectChartr/src/projectchartr/addEventScene.fxml
+++ b/projectChartr/src/projectchartr/addEventScene.fxml
@@ -8,58 +8,54 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="projectchartr.AddEventSceneController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projectchartr.AddEventSceneController">
    <children>
-      <VBox alignment="BOTTOM_LEFT" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="70.0">
+      <HBox alignment="CENTER_LEFT" layoutX="17.0" layoutY="64.0" prefHeight="50.0" prefWidth="600.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-               <children>
-                  <Label text="Name:" />
-                  <TextField />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-               <children>
-                  <Label text="Start Date:" />
-                  <DatePicker />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="76.0" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-               <children>
-                  <Label text="End Date:" />
-                  <DatePicker />
-                  <Label text="or" />
-                  <Label text="Duration:" />
-                  <TextField />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="210.0" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-               <children>
-                  <Label text="Notes:" />
-                  <TextArea prefHeight="200.0" prefWidth="200.0" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="310.0" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-               <children>
-                  <Label text="Milestone:" />
-                  <CheckBox mnemonicParsing="false" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="330.0" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-               <children>
-                  <Label text="Dependency" />
-                  <TreeView prefHeight="200.0" prefWidth="200.0" />
-               </children>
-            </HBox>
-            <HBox alignment="BOTTOM_RIGHT" layoutX="10.0" layoutY="343.0" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-               <children>
-                  <Button mnemonicParsing="false" text="Previous" />
-                  <Button mnemonicParsing="false" text="Next" />
-                  <Button mnemonicParsing="false" text="Submit" />
-               </children>
-            </HBox>
+            <Label text="Name:" />
+            <TextField />
          </children>
-      </VBox>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" layoutX="117.0" layoutY="211.0" prefHeight="50.0" prefWidth="600.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="100.0">
+         <children>
+            <Label text="End Date:" />
+            <DatePicker />
+            <Label text="or" />
+            <Label text="Duration:" />
+            <TextField />
+         </children>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" layoutX="147.0" layoutY="272.0" prefHeight="50.0" prefWidth="600.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="50.0">
+         <children>
+            <Label text="Start Date:" />
+            <DatePicker />
+         </children>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" layoutX="243.0" layoutY="34.0" prefHeight="100.0" prefWidth="600.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="150.0">
+         <children>
+            <Label text="Notes:" />
+            <TextArea prefHeight="200.0" prefWidth="200.0">
+               <HBox.margin>
+                  <Insets bottom="10.0" top="10.0" />
+               </HBox.margin></TextArea>
+         </children>
+      </HBox>
+      <HBox alignment="BOTTOM_RIGHT" layoutX="290.0" layoutY="276.0" prefHeight="50.0" prefWidth="600.0" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
+         <children>
+            <Button mnemonicParsing="false" text="Previous" />
+            <Button mnemonicParsing="false" text="Next" />
+            <Button mnemonicParsing="false" text="Submit" />
+         </children>
+      </HBox>
+      <HBox alignment="CENTER_LEFT" layoutX="323.0" layoutY="141.0" prefHeight="100.0" prefWidth="600.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="250.0">
+         <children>
+            <Label text="Dependency:" />
+            <ScrollPane prefHeight="200.0" prefWidth="200.0">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+              </content>
+            </ScrollPane>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
