--- a/projectChartr/src/projectchartr/addEventScene.fxml
+++ b/projectChartr/src/projectchartr/addEventScene.fxml
@@ -1,61 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projectchartr.AddEventSceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox alignment="CENTER_LEFT" layoutX="17.0" layoutY="64.0" prefHeight="50.0" prefWidth="600.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0">
+      <GridPane layoutX="66.0" layoutY="70.0" prefHeight="329.0" prefWidth="534.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="10.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="NEVER" maxWidth="284.0" minWidth="89.0" prefWidth="89.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="400.0" prefWidth="471.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Label text="Name:" />
-            <TextField />
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" layoutX="117.0" layoutY="211.0" prefHeight="50.0" prefWidth="600.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="100.0">
-         <children>
-            <Label text="End Date:" />
-            <DatePicker />
-            <Label text="or" />
-            <Label text="Duration:" />
-            <TextField />
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" layoutX="147.0" layoutY="272.0" prefHeight="50.0" prefWidth="600.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="50.0">
-         <children>
-            <Label text="Start Date:" />
-            <DatePicker />
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" layoutX="243.0" layoutY="34.0" prefHeight="100.0" prefWidth="600.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="150.0">
-         <children>
-            <Label text="Notes:" />
-            <TextArea prefHeight="200.0" prefWidth="200.0">
-               <HBox.margin>
+            <Label text="Event Name: " />
+            <DatePicker promptText="dd/mm/yyyy" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Optionally Add Notes Here..." GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <GridPane.margin>
                   <Insets bottom="10.0" top="10.0" />
-               </HBox.margin></TextArea>
+               </GridPane.margin>
+            </TextArea>
+            <HBox alignment="BOTTOM_RIGHT" prefHeight="70.0" prefWidth="491.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+               <children>
+                  <Button ellipsisString="" mnemonicParsing="false" text="Previous" textOverrun="CLIP" />
+                  <Button mnemonicParsing="false" text="Next" textOverrun="CLIP" />
+                  <Button mnemonicParsing="false" text="Submit" textOverrun="CLIP" />
+               </children>
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin>
+            </HBox>
+            <Label text="Start Date: " GridPane.rowIndex="1" />
+            <Label text="End Date: " GridPane.rowIndex="2" />
+            <Label text="Notes: " GridPane.rowIndex="3" />
+            <Label text="Dependency: " GridPane.rowIndex="4" />
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <DatePicker promptText="dd/mm/yyyy" />
+                  <Label text="or Days:" />
+                  <TextField minWidth="103.0" prefWidth="103.0" promptText="Enter Length" />
+               </children>
+            </HBox>
+            <ComboBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1">
+               <children>
+                  <TextField maxWidth="300.0" prefWidth="200.0" promptText="Enter Event Name" />
+                  <Label text="ID:" />
+                  <TextField minWidth="103.0" prefHeight="27.0" prefWidth="103.0" promptText="Enter Event ID" />
+               </children>
+            </HBox>
          </children>
-      </HBox>
-      <HBox alignment="BOTTOM_RIGHT" layoutX="290.0" layoutY="276.0" prefHeight="50.0" prefWidth="600.0" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
-         <children>
-            <Button mnemonicParsing="false" text="Previous" />
-            <Button mnemonicParsing="false" text="Next" />
-            <Button mnemonicParsing="false" text="Submit" />
-         </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" layoutX="323.0" layoutY="141.0" prefHeight="100.0" prefWidth="600.0" spacing="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="250.0">
-         <children>
-            <Label text="Dependency:" />
-            <ScrollPane prefHeight="200.0" prefWidth="200.0">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-              </content>
-            </ScrollPane>
-         </children>
-      </HBox>
+      </GridPane>
    </children>
 </AnchorPane>
