--- a/projectChartr/src/projectchartr/addEventScene.fxml
+++ b/projectChartr/src/projectchartr/addEventScene.fxml
@@ -46,7 +46,7 @@
             <Label text="Dependency: " GridPane.rowIndex="4" />
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <DatePicker fx:id="endDateField" onMouseClicked="#showEndDate" promptText="dd/mm/yyyy" />
+                  <DatePicker fx:id="endDateField" promptText="dd/mm/yyyy" />
                   <Label text="or Days:" />
                   <TextField fx:id="durationField" minWidth="107.0" onMouseClicked="#showDuration" prefHeight="27.0" prefWidth="107.0" promptText="Enter Duration" />
                </children>
