--- a/projectChartr/src/projectchartr/existingProjectsScene.fxml
+++ b/projectChartr/src/projectchartr/existingProjectsScene.fxml
@@ -7,8 +7,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projectchartr.ExistingProjectsSceneController">
    <left>
       <AnchorPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="175.0" BorderPane.alignment="CENTER">
          <children>
@@ -49,7 +48,7 @@
             <Insets right="10.0" />
          </BorderPane.margin>
          <children>
-            <Button mnemonicParsing="false" text="New Project" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0" />
+            <Button fx:id="newProjectButton" mnemonicParsing="false" text="New Project" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0" />
             <ScrollPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
                <content>
                   <ImageView fitHeight="238.0" fitWidth="378.0" pickOnBounds="true" preserveRatio="true" />
