--- a/projectChartr/src/projectchartr/mainWindowScene.fxml
+++ b/projectChartr/src/projectchartr/mainWindowScene.fxml
@@ -9,11 +9,11 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projectchartr.MainWindowSceneController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="600.0" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projectchartr.MainWindowSceneController">
    <left>
       <AnchorPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="175.0" BorderPane.alignment="CENTER">
          <children>
-            <ListView fx:id="eventsList" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <ListView fx:id="eventsList" minHeight="2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
          </children>
          <BorderPane.margin>
             <Insets top="10.0" />
@@ -21,7 +21,7 @@
       </AnchorPane>
    </left>
    <bottom>
-      <Pane prefHeight="20.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <Pane minHeight="20.0" prefHeight="20.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <Label fx:id="baseLineLabel" maxHeight="20.0" minHeight="20.0" prefHeight="20.0" text="Label" />
          </children>
@@ -33,53 +33,41 @@
             <Insets left="10.0" right="10.0" top="10.0" />
          </BorderPane.margin>
          <children>
-            <TabPane prefHeight="200.0" prefWidth="200.0" side="BOTTOM" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <TabPane minHeight="200.0" prefHeight="200.0" prefWidth="200.0" side="BOTTOM" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <tabs>
                 <Tab text="WBT">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ScrollPane layoutX="27.0" layoutY="56.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <ScrollPane layoutX="27.0" layoutY="56.0" minHeight="200.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <content>
-                                    <AnchorPane prefHeight="260.0" prefWidth="402.0">
-                                       <children>
-                                          <Canvas height="261.0" width="402.0" />
-                                       </children>
-                                    </AnchorPane>
+                                    <Canvas height="660.0" width="1003.0" />
                                  </content>
                               </ScrollPane>
                            </children>
                         </AnchorPane>
                   </content>
                 </Tab>
-                  <Tab text="PERT">
+                  <Tab text="Gantt">
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ScrollPane layoutX="27.0" layoutY="56.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <ScrollPane layoutX="27.0" layoutY="56.0" minHeight="200.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <content>
-                                    <AnchorPane prefHeight="260.0" prefWidth="402.0">
-                                       <children>
-                                          <Canvas height="261.0" width="402.0" />
-                                       </children>
-                                    </AnchorPane>
+                                    <Canvas height="660.0" width="1003.0" />
                                  </content>
                               </ScrollPane>
                            </children>
                         </AnchorPane>
                      </content>
                   </Tab>
-                  <Tab text="Gantt">
+                  <Tab text="PERT">
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <ScrollPane layoutX="27.0" layoutY="56.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <ScrollPane layoutX="27.0" layoutY="56.0" minHeight="200.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <content>
-                                    <AnchorPane prefHeight="260.0" prefWidth="402.0">
-                                       <children>
-                                          <Canvas height="261.0" layoutX="1.0" layoutY="-1.0" width="402.0" />
-                                       </children>
-                                    </AnchorPane>
+                                    <Canvas height="660.0" width="1003.0" />
                                  </content>
                               </ScrollPane>
                            </children>
@@ -92,15 +80,24 @@
       </AnchorPane>
    </center>
    <top>
-      <HBox prefHeight="75.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <AnchorPane>
          <children>
-            <Button fx:id="addEvBttn" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="Add Event" />
-            <Button fx:id="editEvBttn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="Edit Event" />
-            <Button fx:id="remEvBttn" layoutX="69.0" layoutY="10.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="Remove Event" textAlignment="CENTER" wrapText="true" />
-            <Button fx:id="openButton" layoutX="128.0" layoutY="10.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="Open" />
-            <Button fx:id="saveButton" layoutX="187.0" layoutY="10.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="Save" />
-            <Button fx:id="printButton" layoutX="246.0" layoutY="10.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="Print" />
+            <HBox layoutX="597.0" prefHeight="75.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Button fx:id="addEvBttn" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="Add Event" />
+                  <Button fx:id="editEvBttn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="Edit Event" />
+                  <Button fx:id="remEvBttn" layoutX="69.0" layoutY="10.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="Remove Event" textAlignment="CENTER" wrapText="true" />
+                  <Button fx:id="openButton" layoutX="128.0" layoutY="10.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="Open" />
+                  <Button fx:id="saveButton" layoutX="187.0" layoutY="10.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="Save" />
+                  <Button fx:id="printButton" layoutX="246.0" layoutY="10.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="Print" />
+               </children>
+            </HBox>
+            <HBox maxHeight="75.0" prefHeight="75.0" prefWidth="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <ImageView fitHeight="75.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </HBox>
          </children>
-      </HBox>
+      </AnchorPane>
    </top>
 </BorderPane>
