--- a/projectChartr/src/projectchartr/existingProjectsScene.fxml
+++ b/projectChartr/src/projectchartr/existingProjectsScene.fxml
@@ -48,7 +48,7 @@
             <Insets right="10.0" />
          </BorderPane.margin>
          <children>
-            <Button fx:id="newProjectButton" mnemonicParsing="false" text="New Project" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0" />
+            <Button fx:id="newProjectButton" onAction="#openNewProj"  mnemonicParsing="false" text="New Project" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="0.0" />
             <ScrollPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
                <content>
                   <ImageView fitHeight="238.0" fitWidth="378.0" pickOnBounds="true" preserveRatio="true" />
