added wbt image

--- a/projectChartr/src/projectchartr/mainWindowScene.fxml
+++ b/projectChartr/src/projectchartr/mainWindowScene.fxml
@@ -13,7 +13,7 @@
    <left>
       <AnchorPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="175.0" BorderPane.alignment="CENTER">
          <children>
-            <ListView fx:id="eventsList" minHeight="2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <ListView  minHeight="2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" fx:id="eventsList" />
          </children>
          <BorderPane.margin>
             <Insets top="10.0" />
@@ -42,6 +42,10 @@
                               <ScrollPane layoutX="27.0" layoutY="56.0" minHeight="200.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <content>
                                     <Canvas height="660.0" width="1003.0" />
+                                    <ImageView fx:id="imageView">
+                                                    <image>
+                                                    </image>
+                                                </ImageView>
                                  </content>
                               </ScrollPane>
                            </children>
