--- a/projectChartr/src/projectchartr/mainWindowScene.fxml
+++ b/projectChartr/src/projectchartr/mainWindowScene.fxml
@@ -44,6 +44,7 @@
                                     <Canvas height="660.0" width="1003.0" />
                                     <ImageView fx:id="imageView">
                                                     <image>
+                                                        <Image url="@wbt.png"/>
                                                     </image>
                                                 </ImageView>
                                  </content>
